# cloudflow

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: realease.yml  release.yml
MLFLOW_load/: main_nb_load.ipynb
MLFLOW_save/: download_file.py  main_nb_save.ipynb  no_import.py  to_import.py  utils.py
MLFLOW_save/sub_folder/: test_import.py
cloudflow/: __init__.py  cloudflow_model.py  custom_class_mlflow.py  init_logger.py  prepare_env.py
demo/MLFLOW_load/: LOAD_MLflow.ipynb
demo/MLFLOW_save/: download_file.py  get_print.py  intermediate_module.py  main_save.ipynb  utils.py
demo/MLFLOW_save/mlruns/0/: meta.yaml
demo/MLFLOW_save/sub_folder/subsub_folder/: is_sub.py
