[metadata]
name = cloudflow
version = 1.0.4
description = Cloudflow: A platform to streamline your end-to-end Machine Learning pipeline management
author = Simon Le Mouellic
author-email = simon.lemouellic@outlook.com
license = mit
url =  https://github.com/SimonLMC/cloudflow/
project-urls =
    Documentation = https://github.com/SimonLMC/cloudflow/
long-description = file: README.md
long-description-content-type = text/markdown

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

[options]
zip_safe = False
packages = cloudflow
include_package_data = True


# Add here dependencies of your project (semicolon/line-separated), e.g.
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6


[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1
